# MeetFlowAI

./: README.md
backend/: meetflow_backend.spec  requirements.txt
backend/app/: auth.py  database.py  main.py
backend/scripts/: build_sidecar.py
frontend/: .env.tauri  next.config.mjs  package-lock.json  package.json
frontend/app/: page.jsx
frontend/app/(workspace)/dashboard/: page.jsx
frontend/app/(workspace)/meetings/: page.jsx
frontend/app/(workspace)/meetings/new/: page.jsx
frontend/app/(workspace)/meetings/view/: page.jsx
frontend/scripts/: tauri-preflight.mjs
frontend/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
frontend/src-tauri/.cargo/: config.toml
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs
